--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongodb": "^6.1.0",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18"
   },
