--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -13,6 +13,7 @@
     "@tiptap/pm": "^2.1.11",
     "@tiptap/react": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
+    "lucide-react": "^0.284.0",
     "mongodb": "^6.1.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
