--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tiptap/pm": "^2.1.11",
     "@tiptap/react": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
-    "lucide-react": "^0.284.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "https-proxy-agent": "^7.0.2",
+    "lucide-react": "^0.263.1",
     "mongodb": "^6.1.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
