--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tiptap/pm": "^2.1.11",
@@ -23,6 +24,7 @@
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "tailwind-merge": "^1.14.0",
