--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tiptap/extension-color": "^2.1.11",
     "@tiptap/extension-document": "^2.1.11",
     "@tiptap/pm": "^2.1.11",
@@ -36,6 +37,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
