--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -21,6 +21,9 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tiptap/extension-color": "^2.1.11",
     "@tiptap/extension-document": "^2.1.11",
+    "@tiptap/extension-dropcursor": "^2.1.12",
+    "@tiptap/extension-focus": "^2.1.12",
+    "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/pm": "^2.1.11",
     "@tiptap/react": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
