--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@studio-freight/lenis": "^1.0.27",
     "@tiptap/extension-color": "^2.1.11",
     "@tiptap/extension-document": "^2.1.11",
     "@tiptap/extension-dropcursor": "^2.1.12",
@@ -30,6 +31,7 @@
     "@tiptap/starter-kit": "^2.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "https-proxy-agent": "^7.0.2",
     "lucide-react": "^0.263.1",
     "mongodb": "^6.1.0",
@@ -39,6 +41,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "sass": "^1.69.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2"
