--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "https-proxy-agent": "^7.0.2",
     "lucide-react": "^0.263.1",
     "mongodb": "^6.1.0",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/animejs": "^3.1.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
