--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -24,6 +24,7 @@
     "@tiptap/extension-document": "^2.1.11",
     "@tiptap/extension-dropcursor": "^2.1.12",
     "@tiptap/extension-focus": "^2.1.12",
+    "@tiptap/extension-heading": "^2.1.12",
     "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/html": "^2.1.12",
     "@tiptap/pm": "^2.1.11",
@@ -32,7 +33,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
-    "gsap": "^3.12.2",
     "https-proxy-agent": "^7.0.2",
     "lucide-react": "^0.263.1",
     "mongodb": "^6.1.0",
