--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -43,6 +43,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.69.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -54,6 +55,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.11",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
