--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.47.0",
     "react-slick": "^0.29.0",
     "sass": "^1.69.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.2"
