--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-slick": "^0.29.0",
+    "react-youtube": "^10.1.0",
     "sass": "^1.69.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.14.0",
