--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -45,11 +45,14 @@
     "react-hook-form": "^7.47.0",
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
+    "resend": "^2.0.0",
     "sass": "^1.69.3",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.2.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
