--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -25,6 +25,7 @@
     "@tiptap/extension-dropcursor": "^2.1.12",
     "@tiptap/extension-focus": "^2.1.12",
     "@tiptap/extension-heading": "^2.1.12",
+    "@tiptap/extension-link": "^2.2.2",
     "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/html": "^2.1.12",
     "@tiptap/pm": "^2.1.11",
