--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -25,6 +25,7 @@
     "@tiptap/extension-dropcursor": "^2.1.12",
     "@tiptap/extension-focus": "^2.1.12",
     "@tiptap/extension-heading": "^2.1.12",
+    "@tiptap/extension-link": "^2.2.2",
     "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/html": "^2.1.12",
     "@tiptap/pm": "^2.1.11",
@@ -48,6 +49,7 @@
     "react-youtube": "^10.1.0",
     "resend": "^2.0.0",
     "sass": "^1.69.3",
+    "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.2.4",
     "tailwind-merge": "^1.14.0",
