Finished Cookie Consent

--- a/willystogo/package.json
+++ b/willystogo/package.json
@@ -20,12 +20,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@studio-freight/lenis": "^1.0.27",
+    "@tanstack/react-table": "^8.20.1",
     "@tiptap/extension-color": "^2.1.11",
     "@tiptap/extension-document": "^2.1.11",
     "@tiptap/extension-dropcursor": "^2.1.12",
     "@tiptap/extension-focus": "^2.1.12",
     "@tiptap/extension-heading": "^2.1.12",
-    "@tiptap/extension-link": "^2.2.2",
+    "@tiptap/extension-link": "^2.6.1",
     "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/html": "^2.1.12",
     "@tiptap/pm": "^2.1.11",
